--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Lib</string>
+    <string name="system">[系统应用]%s</string>
+    <string name="external">安装：外部存储</string>
+    <string name="internal">安装：内部存储</string>
 </resources>
